# forker

./: CMakeLists.txt
include/: client.h  globals.h  pch.h  protocol.h  server.h  stringVector.h  utils.h
src/: client.c  main.c  protocol.c  server.c  stringVector.c  utils.c
